refactor(common-json): 移除 Vector API 反射，改用 JIT 自动向量化
- BytesUtil 和 VectorSimdUtil 完全移除对 JDK Vector API 的检测和反射调用
- SIMD_ENABLED 和 VECTOR_API_AVAILABLE 常量均固定为 false，保留兼容旧 API
- 相关字节和字符批处理方法改为朴素循环实现，依赖 Hotspot JIT 的 SuperWord 自动向量化
- 优化注释，明确当前实现不再依赖显式 SIMD 指令，提升性能同时简化代码结构
- 更新 README，说明性能策略调整为 JIT 自动向量化，去除原有 Vector API 介绍内容

refactor(literule-server): 重构 LiteRuleAutoConfiguration，提高配置可读性

- 拆分 DefaultRuleEngine 初始化代码为多个私有配置方法
- 独立处理可选依赖注入、Trace 记录器、超时执行器、熔断器和灰度路由配置
- 新增评估结果缓存支持，基于配置启用并记录日志
- 整理日志输出，打印更多启动时引擎配置信息，提升运维可观察性
- 添加 Micrometer 桥接支持，条件注入 MeterRegistry

fix(cronjob-server): 限制每个 logId SSE 订阅者最大连接数

- 针对 LogStreamManager 的 SSE 订阅方法新增最大订阅者数限制
- 超出阈值时拒绝连接并通过日志警告提示，防止连接资源耗尽
- 订阅者列表使用线程安全的 CopyOnWriteArrayList 管理，保证并发安全

feat(common-ratelimit): 为限流规则和断路器配置添加默认值支持

- RateLimitRule 常用字段使用 Lombok @Builder.Default 指定默认值
- CircuitBreakerConfig 主要数值字段新增 @Builder.Default，确保 Builder 使用时有合理默认参数
- 增强配置对象可用性和稳定性，减少手动初始化复杂度

docs(common-json): 更新 README，反映 JIT 自动向量化方案

- 去除关于 SIMD 和 Vector API 的描述，替换为当前基于 JIT 自动向量化实现
- 调整模块功能描述，说明字符数组批量操作无反射开销且提升了性能
- 保持项目命名空间和模块入口类说明一致，增加用户理解准确性